prevents menu from wrapping

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -6,6 +6,7 @@
 	font-size: $body-size;
 	a{
 		min-width: 100%;
+		white-space: nowrap;
 	}
 	ul{
 		width: 50%;
